--- a/NewGoBang3/GoBang/chessshow.ui
+++ b/NewGoBang3/GoBang/chessshow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1125</width>
-    <height>920</height>
+    <width>1129</width>
+    <height>1048</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>110</y>
+     <x>90</x>
+     <y>150</y>
      <width>331</width>
      <height>451</height>
     </rect>
@@ -29,51 +29,11 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>710</x>
-     <y>70</y>
-     <width>82</width>
-     <height>128</height>
-    </rect>
-   </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <widget class="QPushButton" name="pushButton">
-      <property name="text">
-       <string>双人对战</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="pushButton_2">
-      <property name="text">
-       <string>ai对战</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="pushButton_3">
-      <property name="text">
-       <string>网络对战</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="pushButton_4">
-      <property name="text">
-       <string>返回登录</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
   <widget class="QWidget" name="widget_select" native="true">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>280</y>
+     <x>180</x>
+     <y>410</y>
      <width>191</width>
      <height>141</height>
     </rect>
@@ -122,37 +82,11 @@
    <property name="geometry">
     <rect>
      <x>430</x>
-     <y>330</y>
+     <y>390</y>
      <width>131</width>
-     <height>101</height>
+     <height>231</height>
     </rect>
    </property>
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>82</width>
-      <height>76</height>
-     </rect>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout_2">
-     <item>
-      <widget class="QPushButton" name="pushButton_5">
-       <property name="text">
-        <string>放弃寻找</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_findteam">
-       <property name="text">
-        <string>寻找队伍</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
    <widget class="QPushButton" name="pushButton_6">
     <property name="geometry">
      <rect>
@@ -166,14 +100,152 @@
      <string>关闭</string>
     </property>
    </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>50</y>
+      <width>101</width>
+      <height>95</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <item>
+      <widget class="QPushButton" name="pushButton_9">
+       <property name="text">
+        <string>显示聊天对话框</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_findteam">
+       <property name="text">
+        <string>寻找队伍</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_5">
+       <property name="text">
+        <string>放弃寻找</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QWidget" name="layoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>710</x>
+     <y>140</y>
+     <width>84</width>
+     <height>231</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout_5">
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QPushButton" name="pushButton">
+        <property name="text">
+         <string>双人对战</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_2">
+        <property name="text">
+         <string>ai对战</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_3">
+        <property name="text">
+         <string>网络对战</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_4">
+        <property name="text">
+         <string>返回登录</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pushButton_7">
+      <property name="text">
+       <string>悔棋</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <widget class="QPushButton" name="pushButton_SelfWon">
+        <property name="text">
+         <string>我赢了</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_TimeOut">
+        <property name="text">
+         <string>超时</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QLCDNumber" name="lcdNumber">
+   <property name="geometry">
+    <rect>
+     <x>192</x>
+     <y>770</y>
+     <width>81</width>
+     <height>23</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>28</x>
+     <y>770</y>
+     <width>79</width>
+     <height>19</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>鼠标点击的点</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_show">
+   <property name="geometry">
+    <rect>
+     <x>118</x>
+     <y>770</y>
+     <width>62</width>
+     <height>19</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>450</x>
-     <y>680</y>
-     <width>24</width>
-     <height>18</height>
+     <x>281</x>
+     <y>770</y>
+     <width>31</width>
+     <height>19</height>
     </rect>
    </property>
    <property name="text">
@@ -183,90 +255,67 @@
   <widget class="QLabel" name="label_stable">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>680</y>
-     <width>61</width>
-     <height>18</height>
+     <x>350</x>
+     <y>780</y>
+     <width>81</width>
+     <height>19</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_7">
+  <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>710</x>
-     <y>240</y>
-     <width>80</width>
-     <height>26</height>
+     <x>454</x>
+     <y>743</y>
+     <width>121</width>
+     <height>19</height>
     </rect>
    </property>
    <property name="text">
-    <string>悔棋</string>
+    <string>提示状态:</string>
    </property>
   </widget>
-  <widget class="QLCDNumber" name="lcdNumber">
+  <widget class="QLabel" name="label_info">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>710</y>
-     <width>131</width>
+     <x>517</x>
+     <y>743</y>
+     <width>91</width>
+     <height>19</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>454</x>
+     <y>770</y>
+     <width>130</width>
+     <height>19</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>网络对战你所执的棋子</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_node">
+   <property name="geometry">
+    <rect>
+     <x>610</x>
+     <y>760</y>
+     <width>61</width>
      <height>41</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QWidget" name="layoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>710</y>
-     <width>231</width>
-     <height>41</height>
-    </rect>
+   <property name="text">
+    <string>　</string>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>鼠标点击的点</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QLabel" name="label_show">
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="">
-   <property name="geometry">
-    <rect>
-     <x>710</x>
-     <y>280</y>
-     <width>82</width>
-     <height>62</height>
-    </rect>
-   </property>
-   <layout class="QVBoxLayout" name="verticalLayout_3">
-    <item>
-     <widget class="QPushButton" name="pushButton_SelfWon">
-      <property name="text">
-       <string>我赢了</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="pushButton_TimeOut">
-      <property name="text">
-       <string>超时</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
   </widget>
  </widget>
  <resources/>
